@@ -7,7 +7,7 @@ use Error::Pure::Utils qw(clean);
 use File::Object;
 use File::Spec::Functions qw(abs2rel);
 use Perl6::Slurp qw(slurp);
-use Test::More 'tests' => 13;
+use Test::More 'tests' => 14;
 use Test::NoWarnings;
 use Test::Output;
 use Test::Warn 0.31;
@@ -105,6 +105,24 @@ stdout_is(
 
 # Test.
 @ARGV = (
+	'-n 1',
+	$data_dir->file('ex3.xml')->s,
+	'040',
+	'a',
+	'ABA001',
+);
+$right_ret = slurp($data_dir->file('ex1.xml')->s);
+stdout_is(
+	sub {
+		App::MARC::Filter->new->run;
+		return;
+	},
+	$right_ret,
+	'Run filter for MARC XML file with 1 record (all 040a=ABA001, but filter to 1 output record).',
+);
+
+# Test.
+@ARGV = (
 	$data_dir->file('ex1.xml')->s,
 	'leader',
 	'     nam a22        4500',
@@ -191,8 +209,9 @@ sub help {
 		$script =~ s/\\/\//msg;
 	}
 	my $help = <<"END";
-Usage: $script [-h] [-o format] [-r] [-v] [--version] marc_xml_file field [subfield] value
+Usage: $script [-h] [-n num] [-o format] [-r] [-v] [--version] marc_xml_file field [subfield] value
 	-h		Print help.
+	-n num		Number of records to output (default value is all records).
 	-o format	Output MARC format. Possible formats are ascii, xml.
 	-r		Use value as Perl regexp.
 	-v		Verbose mode.
